[tool.poetry]
name = "cardano-tx-builder"
version = "0.1.0"
description = ""
authors = ["Hareem Adderley <hareem@wavegp.com>"]
readme = "README.md"
packages = [{include = "cardano_tx_builder"}]

[tool.poetry.dependencies]
python = ">=3.8.10, <3.12"
pycardano = "^0.9.0"
pyogmios = "^0.7.3"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
